--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div id="app">
-    <h1>Welcome to our Web3 Telegram Group!</h1>
+    <h1>Welcome to All Things Pulse Web3 Demo!</h1>
     <p>Click the button below to join our Telegram Group:</p>
     <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
     <button id="connectWalletButton" onclick="connectWallet()">Connect to MetaMask</button>
