--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>All Things Pulse Web3 Demo</title>
   <style>
     body {
-      background-color: #f5f5f5;
-      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #FFA500, #FFFF00);
+      font-family: 'Cursive', sans-serif;
       text-align: center;
       margin: 0;
       padding: 0;
@@ -28,8 +28,9 @@
     }
 
     h1 {
-      color: #333333;
-      font-size: 24px;
+      color: #ffffff;
+      font-size: 32px;
+      text-shadow: 2px 2px 4px #000000;
       margin-bottom: 20px;
     }
 
@@ -62,6 +63,13 @@
       margin-left: 10px;
     }
 
+    .divider {
+      width: 100%;
+      height: 2px;
+      background-color: #333333;
+      margin: 20px 0;
+    }
+
     #walletStatus {
       margin-top: 10px;
       font-weight: bold;
@@ -80,6 +88,7 @@
     <p>Click the button below to join our Telegram Group:</p>
     <div>
       <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
+      <div class="divider"></div>
       <button id="connectWalletButton" onclick="connectWallet()">Connect to MetaMask</button>
     </div>
     <div id="walletStatus">
