--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>All Things Pulse Web3 Demo</title>
   <style>
     body {
-      background: linear-gradient(135deg, #FFA500, #FFFF00);
+      background: linear-gradient(135deg, #663399, #330066);
       font-family: 'Cursive', sans-serif;
       text-align: center;
       margin: 0;
@@ -19,7 +19,7 @@
     }
 
     #app {
-      background-color: #ffffff;
+      background-color: #330066;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -29,14 +29,14 @@
 
     h1 {
       color: #ffffff;
-      font-size: 32px;
+      font-size: 48px;
       text-shadow: 2px 2px 4px #000000;
       margin-bottom: 20px;
     }
 
     p {
-      color: #555555;
-      font-size: 16px;
+      color: #ffffff;
+      font-size: 18px;
       margin-bottom: 20px;
     }
 
@@ -64,10 +64,11 @@
     }
 
     .divider {
-      width: 100%;
-      height: 2px;
-      background-color: #333333;
-      margin: 20px 0;
+      width: 2px;
+      height: 100%;
+      background-color: #555555;
+      display: inline-block;
+      margin: 0 20px;
     }
 
     #walletStatus {
@@ -89,7 +90,7 @@
     <div>
       <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
       <div class="divider"></div>
-      <button id="connectWalletButton" onclick="connectWallet()">Connect to MetaMask</button>
+      <button id="connectWalletButton" onclick="connectWallet()">Connect Wallet</button>
     </div>
     <div id="walletStatus">
       Wallet Not Connected
