--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>All Things Pulse Web3 Demo</title>
   <style>
     body {
-      background: linear-gradient(135deg, #663399, #330066);
+      background-color: #FFA500; /* Solid fluorescent orange */
       font-family: 'Cursive', sans-serif;
       text-align: center;
       margin: 0;
@@ -19,7 +19,7 @@
     }
 
     #app {
-      background-color: #330066;
+      background: linear-gradient(135deg, #FFA500, #FFFF00);
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -29,14 +29,14 @@
 
     h1 {
       color: #ffffff;
-      font-size: 48px;
+      font-size: 32px;
       text-shadow: 2px 2px 4px #000000;
       margin-bottom: 20px;
     }
 
     p {
-      color: #ffffff;
-      font-size: 18px;
+      color: #555555;
+      font-size: 16px;
       margin-bottom: 20px;
     }
 
@@ -64,11 +64,10 @@
     }
 
     .divider {
-      width: 2px;
-      height: 100%;
-      background-color: #555555;
-      display: inline-block;
-      margin: 0 20px;
+      width: 100%;
+      height: 2px;
+      background-color: #333333;
+      margin: 20px 0;
     }
 
     #walletStatus {
@@ -86,7 +85,7 @@
 <body>
   <div id="app">
     <h1>Welcome to All Things Pulse Web3 Demo!</h1>
-    <p>Click the button below to join our Telegram Group:</p>
+    <p>Join our Telegram Group!</p>
     <div>
       <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
       <div class="divider"></div>
