--- a/index.html
+++ b/index.html
@@ -60,15 +60,7 @@
       background-color: #45a049;
     }
 
-    #disconnectWalletButton {
-      background-color: #FF0000; /* Red color for Disconnect Wallet button */
-    }
-
-    #disconnectWalletButton:hover {
-      background-color: #a04549;
-    }
-
-    #connectWalletButton, #disconnectWalletButton {
+    #connectWalletButton {
       margin-left: 10px;
     }
 
@@ -99,7 +91,6 @@
       <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
       <div class="divider"></div>
       <button id="connectWalletButton" onclick="connectWallet()">Connect Wallet</button>
-      <button id="disconnectWalletButton" onclick="disconnectWallet()">Disconnect Wallet</button>
     </div>
     <div id="walletStatus">
       Wallet Not Connected
@@ -126,10 +117,6 @@
         console.error('Error connecting to MetaMask:', error);
         alert('Error connecting to MetaMask. Check the console for details.');
       }
-    }
-
-    function disconnectWallet() {
-      displayWalletStatus(false);
     }
 
     function displayWalletStatus(isConnected) {
