--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 </head>
 <body>
   <div id="app">
-    <h1>Welcome to All Things Pulse Web3 Demo!</h1>
+    <h1>All Things Pulse</h1>
+	<h2>PulseChain Community Hub</h2>
     <p>Join our Telegram Group!</p>
     <div>
       <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
