--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 	
     function joinTelegramGroup() {
       // Replace the URL with your Telegram Group link
-      var telegramGroupLink = 'https://t.me/allthingspulse';
+      var telegramGroupLink = 'https://guild.xyz/allthingspulse';
       window.open(telegramGroupLink, '_blank');
     }
   </script>
