--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
       text-shadow: 5px 5px 8px #000000; /* Further enhanced shadow effect */
       margin-bottom: 20px;
     }
-
+	
+   h2 {
+      color: #ff0040;
+      font-size: 25px; /* Increased font size */
+      text-shadow: 5px 5px 8px #000000; /* Further enhanced shadow effect */
+      margin-bottom: 20px;
+    }
+	
     p {
       color: black; /* Changed paragraph text color to black */
       font-size: 16px;
