--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
 	
     p {
-      color: black; /* Changed paragraph text color to black */
+      color: #ff0040; /* Changed paragraph text color to black */
       font-size: 16px;
       font-weight: bold; /* Made paragraph text bold */
       margin-bottom: 20px;
