--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
       color: #FF0000; /* Red color for "Wallet Not Connected" */
     }
 
-    .connected {
+    #walletStatus {
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 18px;
       color: #4CAF50; /* Green color for "Wallet Connected" */
     }
 	
