--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@
       color: #FF0000; /* Red color for "Wallet Not Connected" */
     }
 
-    #walletStatus {
-      margin-top: 10px;
-      font-weight: bold;
-      font-size: 18px;
+    .connected {
       color: #4CAF50; /* Green color for "Wallet Connected" */
     }
 	
