--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     </div>
     <div id="walletStatus">
       Wallet Not Connected
-    </div>
+	  </div>
+	<div id="walletAddressBox"></div>
   </div>
 
   <script>
