--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       top: 10px;
       right: 10px;
       padding: 10px;
-      background-color: white;
+      background: linear-gradient(135deg, rgba(128, 0, 128, 0.5), rgba(255, 255, 0, 0.3));
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       border-radius: 5px;
     }
