--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
       color: #4CAF50; /* Green color for "Wallet Connected" */
     }
 	
+    #headerContainer {
+      position: relative;
+    }
+	
 	#walletAddressBox {
       position: fixed;
       top: 10px;
@@ -127,8 +131,10 @@
 </head>
 <body>
   <div id="app">
-  	<div id="walletAddressBox"></div>
+      <div id="headerContainer">
     <h1>All Things Pulse</h1>
+    <div id="walletAddressBox"></div>
+    </div>
 	<h2>PulseChain Community Hub</h2>
     <p>Join our Telegram Group!</p>
     <div>
