--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     async function toggleWalletConnection() {
       if (isWalletConnected) {
-        alert("Disconnect functionality is not supported programmatically for all wallets. Please disconnect manually.");
+        alert("Please disconnect directly from your wallet.");
       } else {
         await connectWallet();
       }
