--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
       max-width: 400px;
       width: 100%;
     }
+	
+    #headerContainer {
+      position: relative;
+    }
+	
+	h1 {
+	margin-bottom: 0px;
+	}
 
     h1 {
       color: #ffffff;
@@ -112,10 +120,6 @@
 
     .connected {
       color: #4CAF50; /* Green color for "Wallet Connected" */
-    }
-	
-    #headerContainer {
-      position: relative;
     }
 	
 	#walletAddressBox {
