--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
       background: linear-gradient(135deg, rgba(255, 0, 64, 0.5), rgba(255, 255, 0, 0.3));
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       border-radius: 5px;
+	  color: #333; /* Default font color */
+      font-family: 'Arial', sans-serif; /* Default font family */
+      font-size: 14px; /* Default font size */
     }
   </style>
 </head>
@@ -137,7 +140,7 @@
   <div id="app">
       <div id="headerContainer">
     <h1>All Things Pulse</h1>
-    <div id="walletAddressBox"></div>
+    <div id="walletAddressBox">Not Connected</div>
     </div>
 	<h2>PulseChain Community Hub</h2>
     <p>Join our Telegram Group!</p>
