--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
     <h2>PulseChain Community Hub</h2>
     <p>Join our Telegram Group!</p>
     <div>
-      <button id="joinTelegramButton" onclick="joinTelegramGroup()">ATP Guild ➶</button>
+      <button id="joinTelegramButton" onclick="joinTelegramGroup()">Join All Things Pulse TG</button>
       <div class="divider"></div>
+      <!-- Remove the "Connect Wallet" button from here -->
     </div>
   </div>
 
