--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div id="app">
     <div id="headerContainer">
       <h1>All Things Pulse</h1>
-      <div id="walletAddressBox" onclick="toggleWalletConnection">Not Connected</div>
+      <div id="walletAddressBox" onclick="toggleWalletConnection()">Not Connected</div>
     </div>
     <h2>PulseChain Community Hub</h2>
     <p>Join our Telegram Group!</p>
